--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -28,8 +28,10 @@
 			<div id="logo"></div>
 			<br>
 			<form class="search-form full-width">
-				<input id="search-box" disabled maxlength="2048" name="search" autocomplete="off" title="Search" type="text" value="" placeholder="STEAM_X:Y:Z / 000 / [U:1:000] / steamcommunity.com/id/user"
-				 aria-label="Search" aria-haspopup="false" role="combobox" aria-autocomplete="list" dir="ltr" spellcheck="false" autofocus="true">
+				<input id="search-box" disabled maxlength="2048" name="search" autocomplete="off" title="Search" type="text" value="" placeholder="STEAM_X:Y:Z / 000 / [U:1:000] / steamcommunity.com/id/user" aria-label="Search" aria-haspopup="false" role="combobox" aria-autocomplete="list" dir="ltr" spellcheck="false" autofocus="true">
+				<button id="search-button" type="submit">
+					<img src="/public/img/right-arrow.png" alt="Search">
+				</button>
 			</form>
 			<div id="search-box-meta">
 				<div class="pull-left half-width">
