Fix search button not fading with search box

--- a/sass/inc/animations.sass
+++ b/sass/inc/animations.sass
@@ -39,6 +39,16 @@
 	100%
 		opacity: 1 !important
 
+@keyframes fade-in-other-low-opacity
+	0%
+		opacity: 0
+
+	55%
+		opacity: 0
+
+	100%
+		opacity: 0.4
+
 @keyframes slide-to-top
 	0%
 		margin-top: calc(50vh - 75px)
