--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -91,6 +91,7 @@ body
 				text-align: center
 				opacity: 0.4
 				transition: opacity .2s
+				animation: #{3.5 * $INITIAL_ANIMATION_MULTIPLIER}s fade-in-other-low-opacity
 
 				img
 					width: 24px
