--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -12,6 +12,10 @@
 	</script>
 
 	<title>Steam ID Lookup</title>
+	<meta name="description" content="Find Steam ID 64/32/3 with the Steam ID Lookup search tool. <3 Supports searches of all Steam ID types & custom URL's." />
+	<meta name="keywords" content="steam id, profile id, find, check, team fortress 2, counterstrike, steam id finder, my steam id, your steam id, community id, vanity url, resolve, custom url, steam, profile" />
+	<meta name="author" content="Acidic9">
+	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/png" href="/public/img/favicon.png">
